<resources>
    <string name="app_name">Collective</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered? Just sign in!</string>
    <string name="sign_in">Sign in</string>
    <string name="not_yet_registered">Not registered yet? Just create account!</string>
    <string name="user_login">User Login</string>
    <string name="user_registration">User registration</string>
    <string name="sign_out">Sign out</string>

    <string name="facebook_app_id">2241994349381155</string>
    <string name="fb_login_protocol_scheme">fb2241994349381155</string>
    <string name="name_activity_account">AccountActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string-array name="activity_names">
        <item>Search</item>
        <item>Saved Artists</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="type_artist_name_and_search">Type artist name and search</string>
    <string name="loading">Loading</string>
    <string name="unique_music_collection">Unique music collection</string>
    <string name="username">username</string>

</resources>
